# fastir

./: README.md  pyproject.toml
docs/: ROADMAP.md
fastir/: Cargo.toml  __init__.py
fastir/tooling/: __init__.py  data_stream.py  inline_features.py
llvm_tools/: Cargo.toml  llvm_tools.pyi  pyproject.toml
llvm_tools/src/: bb_features.rs  bb_stats.rs  fn_features.rs  function_stats.rs  inline_analysis.rs  inline_features.rs  instr_histogram.rs  lib.rs  llvm_module.rs  llvm_sys_wrapper.rs  mod_features.rs  module_stats.rs
notebooks/: experiment1.ipynb  llvm_tools_nb.ipynb
tooling/: __init__.py
