[project]
name = "fastir"
version = "0.1.0"
description = ""
authors = [
    {name = "Liam Eckert",email = "liameckert17@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "polars (>=1.30.0,<2.0.0)",
    "llvm-tools @ ./llvm_tools",
    "datasets (>=3.6.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
notebook = "^7.4.3"

