[package]
name = "llvm_tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "llvm_tools"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.25.0", features = ["extension-module"] }
inkwell = { version = "0.6.0", features = ["llvm18-1"] }
rayon = "1.8"
