[package]
name = "llvm_tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "llvm_tools"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.25.0", features = ["extension-module"] }
llvm-ir = { git = "https://github.com/eckertliam/llvm-ir.git", version = "0.11.3", features = ["llvm-19"] }
llvm-sys = { package = "llvm-sys", version = "191" }
rayon = "1.8"
polars = { version = "0.48.1", features = ["lazy"] }
